--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,11 @@ div {
 #missionTarget img {
     max-width: 40%;
     max-height: 250px;
+    
 }
 
 #missionTarget {
     background-color: #ECF0F1;
-    text-align: center;
     margin: 50px auto;
     width: 50%;
     border: 3px solid black;
@@ -50,4 +50,10 @@ button {
     width: 25%;
     height: 30px;
     margin: 10px 0;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;    
 }
